# slicer-profiles-db

./: README.md  pyproject.toml
.github/workflows/: ruff.yml  update_profiles.yaml
filament/bambustudio/BBL/: addnorth PC Blend HT LCF.json  addnorth PLA E-PLA.json  addnorth PLA Economy.json  addnorth PLA Premium Silk.json  addnorth PLA Wood.json
filament/orcaslicer/BBL/: addnorth ABS rABS.json  addnorth PA-CF Adura X.json  addnorth PETG Base.json  addnorth PLA HT-PLA PRO Matte.json  addnorth PLA X-PLA High Speed.json  addnorth PLA rPLA RE-ADD.json  addnorth PVDF Adamant S1.json  addnorth TPU EasyFlex.json
profiles/anycubicslicer/: _meta.json
profiles/bambustudio/: _meta.json
profiles/crealityprint/: _meta.json
profiles/cura/: _meta.json
profiles/elegooslicer/: _meta.json
profiles/kirimoto/: _meta.json
profiles/orcaslicer/: _meta.json
profiles/prusaslicer/: _meta.json
profiles/superslicer/: _meta.json
slicer_profiles_db/: __init__.py  __main__.py  brands.py  conditions.py  defaults.py  download.py  index.py  mapping.py  matching.py  models.py  pipeline.py  progress.py  resources.py  squash.py  store.py  versions.py
slicer_profiles_db/ofd/: __init__.py  index.py  mapper.py  repo.py  vendor_map.py
slicer_profiles_db/parsers/: __init__.py  anycubicslicer.py  bambustudio.py  base.py  crealityprint.py  cura.py  elegooslicer.py  kirimoto.py  orcaslicer.py  prusaslicer.py  slic3r_json.py  superslicer.py
tests/: test_kirimoto_parser.py  test_mapping_model_parents.py  test_mapping_version_guards.py
tools/: compare_out_superset.py
(+53599 files in other folders)
