[project]
name = "slicer-profiles-db"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "iniconfig>=2.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.scripts]
slicer-profiles-db = "slicer_profiles_db.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slicer_profiles_db"]
